[package]
name = "temperature_grapher"
version = "0.1.0"
authors = ["Stephen Howell <stephen@aninfinitecanvas.com>"]
edition = "2018"
publish = false
description = "Generates a graph from temperature data"
readme = "README.md"
repository = "https://github.com/linux2647/temperature_grapher"
license = "MIT"

[badges]
maintenance = { status = "as-is" }

[dependencies]
plotters = "^0.2"
chrono = "^0.4"
postgres = {version = "^0.15", features = ["with-chrono"]}
structopt = "^0.2"

# AWS Lambda dependencies
lambda_runtime = { version = "^0.1", optional = true }
log = { version = "^0.4", optional = true }
simple_logger = { version = "^1", optional = true }
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
rusoto_core = { version = "^0.39", optional = true }
rusoto_s3 = { version = "^0.39", optional = true }

[features]
aws-lambda = [
    "lambda_runtime",
    "log",
    "simple_logger",
    "serde",
    "serde_derive",
    "serde_json",
    "rusoto_core",
    "rusoto_s3",
]
